[edit] z-index of header to prevent checkbox bug

--- a/source/scss/header.scss
+++ b/source/scss/header.scss
@@ -6,6 +6,7 @@ header#main {
     color: $header-color;
     position: sticky;
     top: 0;
+    z-index: 3;
     
     form {
         width: 85%;
